--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "appId": "com.example.electronhashdemo",
     "productName": "ElectronHashDemo",
     "win": {
-      "target": ["portable"]
+      "target": ["portable"],
+      "icon": "assets/icon.ico"
     },
     "portable": {
       "artifactName": "${productName}-Portable-${version}.exe"
